--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -311,12 +311,11 @@ en:
   duplicate_source: Source exists
   geolocation_invalid_value: Location must contain a valid GeoJSON (http://geojson.org/)
   datetime_invalid_date: Please provide a valid date
-  error_team_archived: Can't create project under trashed team
-  error_project_archived: Can't create media under trashed project
-  error_team_archived_for_source: Can't create source under trashed team
+  error_team_archived: Sorry, you can't add project to a trashed team
+  error_project_archived: Sorry, you can't add item to a trashed project
+  error_team_archived_for_source: Sorry, you can't add source to a trashed team
   permission_error: Sorry, you are not allowed to perform this operation
-  error_annotated_archived: Sorry, this item is in the trash, you can't add a note
-    to it
+  error_annotated_archived: Sorry, you can't add note to a trashed item
   only_super_admin_can_do_this: Sorry, only system administrators can make this change
   max_number_of_team_users_reached: Sorry, the maximum number of users for this team
     has been reached
@@ -325,7 +324,7 @@ en:
   cant_set_custom_statuses: Sorry, the custom statuses feature is not available to
     this team
   cant_change_custom_statuses: |-
-    Can't modify the status definitions because some statuses would go missing. These status identifiers: %{statuses} are in use by the following items:
+    Sorry, you can't modify the status definitions because some statuses would go missing. These status identifiers: %{statuses} are in use by the following items:
      %{urls} %{others_amount}
   cant_create_team_task: Sorry, your team does not have access to this feature
   cant_create_media_under_this_team_using_extension: Sorry, the browser extension
